--- a/NAMRC/Front end code/site.css
+++ b/NAMRC/Front end code/site.css
@@ -61,7 +61,7 @@ body {
 }
 
 .navbar a {
-    color: #999999;
+    color: navy;
     text-decoration: none;
     min-height: 80px;
     padding: 10px 30px;
