--- a/NAMRC/Front end code/site.css
+++ b/NAMRC/Front end code/site.css
@@ -271,4 +271,11 @@ table, th, td {
     width:100%;
     max-height: 80vh; 
     overflow-y: auto;
+    margin-bottom: 5%;
+    margin-left: 9%;
   }
+
+.tablelink{
+    margin-left: 9%;
+    margin-bottom: 7%;
+}
