--- a/NAMRC/Front end code/site.css
+++ b/NAMRC/Front end code/site.css
@@ -279,6 +279,7 @@ footer{
     left: 75px;
     font-size: 150%;
     font-family: "Helvetica", sans-serif; /*font change - done by ariba */
+    color: white;
 }
 
 /* Table CSS added for the viewing - By Ariba */
